--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,7 +42,7 @@
         <nav id="nav">
           <ul class="container">
             <li><a href="https://sihaocheng.github.io/">Home</a></li>
-            <li><a href="#Research">Research</a></li>
+            <li><a href="https://sihaocheng.github.io/index.html/#Research">Research</a></li>
 	    <li><a href="https://sihaocheng.github.io/">CV</a></li>
             <li><a href="https://sihaocheng.github.io/">Personal</a></li>
             <li><a href="https://sihaocheng.github.io/"">中文</a></li>
