--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,10 +42,10 @@
         <nav id="nav">
           <ul class="container">
             <li><a href="https://sihaocheng.github.io/">Home</a></li>
-            <li><a href="https://sihaocheng.github.io/index.html/#Research">Research</a></li>
-	    <li><a href="https://sihaocheng.github.io/">CV</a></li>
-            <li><a href="https://sihaocheng.github.io/">Personal</a></li>
-            <li><a href="https://sihaocheng.github.io/"">中文</a></li>
+            <li><a href="https://sihaocheng.github.io/#Research">Research</a></li>
+	    <li><a href="https://sihaocheng.github.io/CV.pdf">CV</a></li>
+            <li><a href="https://sihaocheng.github.io/personal">Personal</a></li>
+            <li><a href="https://sihaocheng.github.io/Chinese">中文</a></li>
 	  </ul>
         </nav>
 		  
