--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,8 +44,9 @@
             <li><a href="https://sihaocheng.github.io/">Home</a></li>
             <li><a href="https://sihaocheng.github.io/#Research">Research</a></li>
 	    <li><a href="https://sihaocheng.github.io/CV.pdf">CV</a></li>
-            <li><a href="https://sihaocheng.github.io/personal">Personal</a></li>
+            <li><a href="https://sihaocheng.github.io/Personal">Personal</a></li>
             <li><a href="https://sihaocheng.github.io/Chinese">中文</a></li>
+	    <li><a href="#Contact">Contact</a></li>
 	  </ul>
         </nav>
 		  
