--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,7 +46,7 @@
 	    <li><a href="https://sihaocheng.github.io/CV.pdf">CV</a></li>
             <li><a href="https://sihaocheng.github.io/Personal">Personal</a></li>
             <li><a href="https://sihaocheng.github.io/Chinese">中文</a></li>
-	    <li><a href="#Contact">Contact</a></li>
+	    <li><a href="#Contacts">Contacts</a></li>
 	  </ul>
         </nav>
 		  
