--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,8 +15,8 @@
     
     <div class="wrapper">
       <header>
-        <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
-        
+        <h1>{{ site.title | default: site.github.repository_name }}</h1>
+<!--         <a href="{{ "/" | absolute_url }}"></a> -->
         {% if site.logo %}
           <img src="{{site.logo | relative_url}}" alt="Logo" />
         {% endif %}
